feat(library-service): padrao strategy para pesquisa de livros na biblioteca e prateleiras